Added Add new screen for enter auto information

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -4,4 +4,10 @@
     <!-- Bottom menu -->
     <string name="auto_state_screen">Состояние авто</string>
     <string name="profile_screen">Профиль</string>
+    <string name="add_new_auto_screen">Добавить новое авто</string>
+
+    <!-- Profile -->
+    <string name="button_add_new_auto_screen">Добавить авто</string>
+    <string name="label_manufacturer_name">Марка авто</string>
+    <string name="label_model_name">Модель автомобиля</string>
 </resources>
