--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <!-- Bottom menu -->
     <string name="auto_state_screen">Auto state</string>
     <string name="profile_screen">Profile</string>
+    <string name="add_new_auto_screen">Add new auto</string>
+
+    <!-- Profile -->
+    <string name="button_add_new_auto_screen">Add auto</string>
+    <string name="label_manufacturer_name">Auto manufacturer</string>
+    <string name="label_model_name">Auto model</string>
 </resources>
