--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -5,9 +5,11 @@
     <string name="auto_state_screen">Состояние авто</string>
     <string name="profile_screen">Профиль</string>
     <string name="add_new_auto_screen">Добавить новое авто</string>
+    <string name="yandex_oauth_screen">Авторизация в сервисе Яндекс</string>
 
     <!-- Profile -->
     <string name="button_add_new_auto_screen">Добавить авто</string>
+    <string name="button_yandex_oauth_screen">Авторизация в Яндекс</string>
     <string name="label_manufacturer_name">Марка авто</string>
     <string name="label_model_name">Модель автомобиля</string>
 </resources>
