--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,11 @@
     <string name="auto_state_screen">Auto state</string>
     <string name="profile_screen">Profile</string>
     <string name="add_new_auto_screen">Add new auto</string>
+    <string name="yandex_oauth_screen">Yandex Authorization</string>
 
     <!-- Profile -->
     <string name="button_add_new_auto_screen">Add auto</string>
+    <string name="button_yandex_oauth_screen">Yandex auth</string>
     <string name="label_manufacturer_name">Auto manufacturer</string>
     <string name="label_model_name">Auto model</string>
 </resources>
